# UnionCode

./: Babel.toml  Cargo.toml  ReadMe.md  SPEC.md  build.rs  inject_tests.py  patch_build.py  rewrite.py
dictionaries/: chaos.txt  default.txt  smart_box.txt
docs/archive/: audit_report.md
examples/: chaos_benchmark.rs  esp32_smart_box.rs
src/: compiler.rs  lib.rs
tests/: integration_tests.rs  loom.rs  thread_safe_check.rs
tests/it/: compiler_tests.rs  unit_tests.rs
tools/: chaos_llm_responses.txt  lm_studio_chaos.py
